--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,12 +11,16 @@
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
   },
+  "proxy":"http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   },
+  "homepage": "https://ShawnMorreau.github.io/badgut",
   "eslintConfig": {
     "extends": "react-app"
   },
