--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://ShawnMorreau.github.io/",
+  "homepage": "https://ShawnMorreau.github.io",
   "eslintConfig": {
     "extends": "react-app"
   },
